--- a/deploy/crds/batch.k8s.io_batchjobs_crd.yaml
+++ b/deploy/crds/batch.k8s.io_batchjobs_crd.yaml
@@ -30,9 +30,25 @@ spec:
           type: object
         spec:
           description: BatchJobSpec defines the desired state of BatchJob
+          properties:
+            image:
+              description: 'INSERT ADDITIONAL SPEC FIELDS - desired state of cluster
+                Important: Run "operator-sdk generate k8s" to regenerate code after
+                modifying this file Add custom validation using kubebuilder tags:
+                https://book-v1.book.kubebuilder.io/beyond_basics/generating_crd.html'
+              type: string
+          required:
+          - image
           type: object
         status:
           description: BatchJobStatus defines the observed state of BatchJob
+          properties:
+            jobState:
+              description: 'INSERT ADDITIONAL STATUS FIELD - define observed state
+                of cluster Important: Run "operator-sdk generate k8s" to regenerate
+                code after modifying this file Add custom validation using kubebuilder
+                tags: https://book-v1.book.kubebuilder.io/beyond_basics/generating_crd.html'
+              type: string
           type: object
       type: object
   version: v1beta1
