--- a/deploy/crds/batch.k8s.io_v1beta1_httptrigger_cr.yaml
+++ b/deploy/crds/batch.k8s.io_v1beta1_httptrigger_cr.yaml
@@ -4,4 +4,6 @@ metadata:
   name: example-httptrigger
 spec:
   # Add fields here
-  size: 3
+  relativeurl: "test"
+  jobref: 
+    name: "example-batchjob"
