reformat main.go

--- a/deploy/crds/batch.k8s.io_v1beta1_timertrigger_cr.yaml
+++ b/deploy/crds/batch.k8s.io_v1beta1_timertrigger_cr.yaml
@@ -4,4 +4,6 @@ metadata:
   name: example-timertrigger
 spec:
   # Add fields here
-  size: 3
+  corn: "0 0 12 * * *"
+  jobref: 
+    name: "example-batchjob"
